--- a/Conference/Conference.csproj
+++ b/Conference/Conference.csproj
@@ -59,6 +59,12 @@
     <Reference Include="System.Web.Mvc">
       <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
@@ -73,6 +79,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Speaker.cs" />
+    <Compile Include="Models\ConferenceContext.cs" />
+    <Compile Include="Models\ConferenceContextInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
