--- a/Conference/Web.config
+++ b/Conference/Web.config
@@ -8,8 +8,8 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies />
@@ -32,4 +32,12 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
 </configuration>
