--- a/Conference/Conference.csproj
+++ b/Conference/Conference.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Models\Speaker.cs" />
     <Compile Include="Models\ConferenceContext.cs" />
     <Compile Include="Models\ConferenceContextInitializer.cs" />
+    <Compile Include="Controllers\SessionController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
