* Conference.csproj: redid controller with empty read write actions,   will need to edit to include...
* Speaker.cs:
* SessionController.cs:
* SpeakerController.cs:

--- a/Conference/Conference.csproj
+++ b/Conference/Conference.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Models\ConferenceContext.cs" />
     <Compile Include="Models\ConferenceContextInitializer.cs" />
     <Compile Include="Controllers\SessionController.cs" />
+    <Compile Include="Controllers\SpeakerController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
