--- a/Conference/Conference.csproj
+++ b/Conference/Conference.csproj
@@ -113,6 +113,7 @@
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
     <Content Include="Views\Speaker\Index.cshtml" />
+    <Content Include="Views\Speaker\Create.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
